SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository and in snapshots and future releases.
===============================================================================================

Enhancements:

SQL Result: The "Mark duplicates ..." function has two new  modes:
  - Duplicate cells in row
  - Duplicate consecutive cells in row

Merge Request #78 Derby Plugin: When the Derby Plugin is installed it sets the JVM property derby.system.home
  to the Plugin's user directory which is <SQUIRREL_USER_DIR>/plugins/derby/.
  Users may change this default by setting the property in SQuirrel's start script.
  Thanks to Stanimir Stamenkov for the merge request.

Merge Request #77 Improved layout and Look & Feel compatibility for several components
  including but not limited to: Status bar, top panel of SQL results, about dialog.
  Thanks to Stanimir Stamenkov for the merge request.

Merge Request #76 Derby Plugin: Improved Derby shutdown handling for embedded DBs
  Thanks to Stanimir Stamenkov for the merge request.

New Session properties and database specific Query tokenizers now have an option
  to keep SQuirreL from removing line comments "--..." before sending SQLs to database.
  See menu File --> New Session Properties --> tab SQL -->
  checkbox "Remove line comment (--...) from SQL before sending to database"

"Show distinct values..." dialog: When the distinct values of just one column is displayed
  another column named "Frequency" is added to show how often the values occur.

Look and feel Plugin: Upgraded FlatLaf Look and Feel to version 1.1.2.

Session status bar: Object tree bread crumbs are now clickable and can be copied.

Tooltip of "Find in Object tree" search button mentions that code completion (ctrl+space)
  may be used on the text field.

#601 Run query output directly to a file (@file) blocks SQuirreL by a modal progress dialog.