@@ -5,20 +5,17 @@ import net.sourceforge.squirrel_sql.fw.datasetviewer.DataSetViewerTableModel;
 import net.sourceforge.squirrel_sql.fw.datasetviewer.DataSetViewerTablePanelUtil;
 import net.sourceforge.squirrel_sql.fw.datasetviewer.ExtTableColumn;
 import net.sourceforge.squirrel_sql.fw.datasetviewer.RowNumberTableColumn;
-import net.sourceforge.squirrel_sql.fw.util.SquirrelConstants;
 
 import java.awt.Color;
 import java.awt.Point;
-import java.util.Comparator;
 import java.util.HashMap;
-import java.util.HashSet;
-import java.util.TreeMap;
+import java.util.List;
 
 public class DuplicateCellsInSameRowHandler implements DuplicateHandler
 {
    private DataSetViewerTable _dataSetViewerTable;
 
-   private HashMap<Integer, TreeMap<Object, Color>> _duplicateValuesByRowIndex;
+   private HashMap<Integer, HashMap<Object, Color>> _duplicateValuesByRowIndex;
 
    private Point _cellBuf = new Point();
 
@@ -37,70 +34,17 @@ public class DuplicateCellsInSameRowHandler implements DuplicateHandler
 
       _duplicateValuesByRowIndex = new HashMap<>();
 
-
       DataSetViewerTableModel dataSetViewerTableModel = _dataSetViewerTable.getDataSetViewerTableModel();
-
-      // Without this comparator TreeMap breaks on null keys
-      Comparator treeMapKeyComparator = Comparator.nullsFirst((o1, o2) -> compareRespectClassName((Comparable) o1, (Comparable)o2));
 
       for (int j = 0; j < dataSetViewerTableModel.getRowCount(); ++j)
       {
-         HashSet<Object> buf = new HashSet<>();
+         final List<ExtTableColumn> columns = DataSetViewerTablePanelUtil.getTableColumns(_dataSetViewerTable);
 
-         TreeMap<Object, Color> colorByDuplicateValue = new TreeMap<>(treeMapKeyComparator);
+         int finalJ = j;
+         ValueListReader rdr = new ValueListReader(columns.size(), ix -> dataSetViewerTableModel.getValueAt(finalJ, columns.get(ix).getModelIndex()));
+         HashMap<Object, Color> colorByDuplicateValue = DuplicatesColorer.getColorByDuplicateValueMap(rdr);
 
          _duplicateValuesByRowIndex.put(j, colorByDuplicateValue);
-
-         for (ExtTableColumn tableColumn : DataSetViewerTablePanelUtil.getTableColumns(_dataSetViewerTable))
-         {
-            int columnModelIndex = tableColumn.getModelIndex();
-
-            Object val = dataSetViewerTableModel.getValueAt(j, columnModelIndex);
-
-
-            if(buf.contains(val))
-            {
-               colorByDuplicateValue.put(val, null);
-            }
-            else
-            {
-               buf.add(val);
-            }
-         }
-
-         int count = 0;
-         for (Object value : colorByDuplicateValue.keySet())
-         {
-            if(0 == ++count % 2)
-            {
-               colorByDuplicateValue.put(value, SquirrelConstants.DUPLICATE_COLOR_DARKER);
-            }
-            else
-            {
-               colorByDuplicateValue.put(value, SquirrelConstants.DUPLICATE_COLOR);
-            }
-         }
-
-      }
-   }
-
-   private int compareRespectClassName(Comparable o1, Comparable o2)
-   {
-      if(null == o1 && null != o2)
-      {
-         return 1;
-      }
-      else if(null != o1 && null == o2)
-      {
-         return -1;
-      }
-      else if (0 != o1.getClass().getName().compareTo(o2.getClass().getName()))
-      {
-         return o1.getClass().getName().compareTo(o2.getClass().getName());
-      }
-      else
-      {
-         return o1.compareTo(o2);
       }
    }
 
